--- a/src/Modules/Laser.Orchard.PayPal/Web.config
+++ b/src/Modules/Laser.Orchard.PayPal/Web.config
@@ -73,6 +73,10 @@
                 <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-2.0.12.0" newVersion="2.0.12.0" />
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
 </configuration>
