Added base class for Extended Registration Providers. Implemented FillCustomFields function for RequestBodyExtendedRegistrationProvider using json properties.

--- a/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
+++ b/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Models\UserRegistrationLogin.cs" />
     <Compile Include="Models\UserRegistrationPolicyPart.cs" />
     <Compile Include="Models\UserRegistrationSettingsPart.cs" />
+    <Compile Include="Providers\BaseExtendedRegistrationProvider.cs" />
     <Compile Include="Providers\FormDataExtendedRegistrationProvider.cs" />
     <Compile Include="Providers\IExtendedRegistrationProvider.cs" />
     <Compile Include="Providers\RequestBodyExtendedRegistrationProvider.cs" />
