--- a/src/Modules/Laser.Orchard.Questionnaires/packages.config
+++ b/src/Modules/Laser.Orchard.Questionnaires/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net48" />
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
