Saved FirebasePushConfiguration json content to PushMobileSettingsPartRecord.

--- a/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
+++ b/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Controllers\ContactListController.cs" />
     <Compile Include="Controllers\CountPanelController.cs" />
     <Compile Include="Controllers\ExternalPushController.cs" />
+    <Compile Include="Controllers\FileUploadController.cs" />
     <Compile Include="Controllers\ManifestAppFileAdminController.cs" />
     <Compile Include="Controllers\ManifestAppFileController.cs" />
     <Compile Include="Controllers\SmsDeliveryReportController.cs" />
