--- a/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
+++ b/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
@@ -268,6 +268,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Services\IPushGatewayService.cs" />
     <Compile Include="Services\LastDeviceUserDataProvider.cs" />
     <Compile Include="Services\ManifestAppFileServices.cs" />
     <Compile Include="Services\MissingSmsSettingsBanner.cs" />
