PushSharp libraries update and added packages for FirebaseAdmin.

--- a/src/Modules/Laser.Orchard.Mobile/packages.config
+++ b/src/Modules/Laser.Orchard.Mobile/packages.config
@@ -2,6 +2,12 @@
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net48" />
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
+  <package id="FirebaseAdmin" version="3.1.0" targetFramework="net48" />
+  <package id="Google.Api.Gax" version="4.8.0" targetFramework="net48" />
+  <package id="Google.Api.Gax.Rest" version="4.8.0" targetFramework="net48" />
+  <package id="Google.Apis" version="1.69.0" targetFramework="net48" />
+  <package id="Google.Apis.Auth" version="1.69.0" targetFramework="net48" />
+  <package id="Google.Apis.Core" version="1.69.0" targetFramework="net48" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
@@ -9,10 +15,21 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net48" />
   <package id="NHibernate" version="5.3.13" targetFramework="net48" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net48" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.CodeDom" version="7.0.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
+  <package id="System.Management" version="7.0.2" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
