Several corrections on PushSharp references

--- a/src/Modules/Laser.Orchard.ContentExtension/Web.config
+++ b/src/Modules/Laser.Orchard.ContentExtension/Web.config
@@ -132,6 +132,18 @@
         <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.69.0.0" newVersion="1.69.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Api.Gax" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.10.0.0" newVersion="4.10.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Api.Gax.Rest" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.10.0.0" newVersion="4.10.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="PushSharp.Core" publicKeyToken="cf74b75eab2c0170" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.9204.27958" newVersion="1.0.9204.27958" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <system.webServer>
