--- a/src/Modules/Laser.Orchard.Mobile/Web.config
+++ b/src/Modules/Laser.Orchard.Mobile/Web.config
@@ -134,6 +134,18 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Api.Gax" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.10.0.0" newVersion="4.10.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Api.Gax.Rest" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.10.0.0" newVersion="4.10.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="PushSharp.Core" publicKeyToken="cf74b75eab2c0170" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.9204.27958" newVersion="1.0.9204.27958" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <system.webServer>
