--- a/src/Modules/Laser.Orchard.Mobile/packages.config
+++ b/src/Modules/Laser.Orchard.Mobile/packages.config
@@ -3,8 +3,8 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net48" />
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="FirebaseAdmin" version="3.1.0" targetFramework="net48" />
-  <package id="Google.Api.Gax" version="4.8.0" targetFramework="net48" />
-  <package id="Google.Api.Gax.Rest" version="4.8.0" targetFramework="net48" />
+  <package id="Google.Api.Gax" version="4.10.0" targetFramework="net48" />
+  <package id="Google.Api.Gax.Rest" version="4.10.0" targetFramework="net48" />
   <package id="Google.Apis" version="1.69.0" targetFramework="net48" />
   <package id="Google.Apis.Auth" version="1.69.0" targetFramework="net48" />
   <package id="Google.Apis.Core" version="1.69.0" targetFramework="net48" />
@@ -26,6 +26,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.CodeDom" version="7.0.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
   <package id="System.Management" version="7.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
