Added static content to osm maps because styles and icon are now searched locally.

--- a/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
+++ b/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
@@ -107,6 +107,7 @@
     <Content Include="Scripts\OpenLayers.min.js">
       <DependentUpon>OpenLayers.js</DependentUpon>
     </Content>
+    <Content Include="Scripts\theme\default\style.css" />
     <Content Include="Styles\GoogleMaps.css" />
     <Content Include="Styles\images\map-pin.png" />
     <Content Include="Styles\images\marker-icon.png" />
