--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -724,9 +724,11 @@
     <Compile Include="Tokens\OwnershipTokens.cs" />
     <Compile Include="Tokens\ParameterToken.cs" />
     <Compile Include="Tokens\RazorCodeExecutionToken.cs" />
+    <Compile Include="Tokens\RemoveDiacriticsToken.cs" />
     <Compile Include="Tokens\ReplaceToken.cs" />
     <Compile Include="Tokens\SiteTokens.cs" />
     <Compile Include="Tokens\StripHtmlToken.cs" />
+    <Compile Include="Tokens\UnescapedQueryStringToken.cs" />
     <Compile Include="ViewModels\ApiCredentialsPartViewModel.cs" />
     <Compile Include="ViewModels\CommandsExecuteViewModel.cs" />
     <Compile Include="ViewModels\JsonDataTableFieldViewModel.cs" />
